application/web/test/src/main/java/com/tekgs/nextgen/igloo/view/invalidurl/InvalidUrlViewExpected.java
package com.tekgs.nextgen.igloo.view.invalidurl;

public class InvalidUrlViewExpected implements InvalidUrlViewCalibratable {
    public static InvalidUrlViewExpected getInstance() {
        return new InvalidUrlViewExpected();
    }

    @Override
    public String getInvalidUrlMessage() {
        return "Error 404: Page Not Found, sorry :(";
    }
}
